# chessinator

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1  main  main.cpp  memprofile.js  perftdiv.js  play.bat  play.js  play2.bat  play2.js  profile.js  results_old.txt  results_old2.txt  results_old3.txt  results_old4.txt  todo  ughstalemate.txt
